# cloud-computing-terraform-k8s-3tier-app

./: .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
app/: .dockerignore  .gitignore  ARCHITECTURE.md  Makefile  README.md  compose.yaml  lazy.jorge.ps1
app/backend/: .dockerignore  Dockerfile  Makefile  README.md  configmap.yaml  create_test_users.py  deployment.yaml  manage.py  pyproject.toml  secret.yaml  service.yaml
app/backend/cli/: cli.py
app/backend/fixtures/: FIXTURES.md  course.json  group.json  user.json
app/backend/learning_hub/: asgi.py  settings.py  urls.py  wsgi.py
app/backend/my_course/: admin.py  api_views.py  apps.py  forms.py  models.py  serializers.py  urls.py
app/backend/my_course/migrations/: 0001_initial.py  0002_rename_is_enrolled_course_enroll_now_and_more.py  0003_course_students.py  0004_remove_course_enroll_now.py  MIGRATION.md
app/backend/my_course/tests/: test_views.py
infra/: Makefile  k8s.tf  spotify.plan  spotify.tfvars  terraform.tf  terraform.tfvars  variables.tf
scripts/: apply.sh  cleanup.sh  destroy.sh  port-forward.sh  setup.sh  test.sh
terraform/: .terraform.lock.hcl  .terraform.tfstate.lock.info  Makefile  backend.tf  backend_secret.tf  backend_service.tf  database.tf  database_service.tf  db_init_job.tf  errored.tfstate  frontend.tf  frontend_config.tf  frontend_service.tf  images.plan  images.tf  ingress.tf  lhub.auto.tfvars  lhub.plan  lhub.tfvars  outputs.tf  providers.tf  secret.tf  service.tf  terraform.tfstate  terraform.tfstate.1768586142.backup  terraform.tfstate.1768587431.backup  (+5 more)
(+38 files in other folders)
